src/components/common/view/Icon/index.css
@font-face {
  font-family: 'gooddollar';
  src: url('../../../../assets/fonts/gooddollar.eot');
  src: url('../../../../assets/fonts/gooddollar.eot#iefix') format('embedded-opentype'),
       url('../../../../assets/fonts/gooddollar.woff2') format('woff2'),
       url('../../../../assets/fonts/gooddollar.woff') format('woff'),
       url('../../../../assets/fonts/gooddollar.ttf') format('truetype'),
       url('../../../../assets/fonts/gooddollar.svg#gooddollar') format('svg');
  font-weight: normal;
  font-style: normal;
}
/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
/*
@media screen and (-webkit-min-device-pixel-ratio:0) {
  @font-face {
    font-family: 'gooddollar';
    src: url('../font/gooddollar.svg?72942276#gooddollar') format('svg');
  }
}
*/

[class^="icon-"]:before, [class*=" icon-"]:before {
  font-family: "gooddollar";
  font-style: normal;
  font-weight: normal;
  speak: never;

  display: inline-block;
  text-decoration: inherit;
  width: 1em;
  margin-right: .2em;
  text-align: center;
  /* opacity: .8; */

  /* For safety - reset parent styles, that can break glyph codes*/
  font-variant: normal;
  text-transform: none;

  /* fix buttons height, for twitter bootstrap */
  line-height: 1em;

  /* Animation center compensation - margins should be symmetric */
  /* remove if not needed */
  margin-left: .2em;

  /* you can be more comfortable with increased icons size */
  /* font-size: 120%; */

  /* Font smoothing. That was taken from TWBS */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  /* Uncomment for 3D effect */
  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
}

.icon-arrow-down:before { content: '\e800'; } /* '' */
.icon-arrow-up:before { content: '\e801'; } /* '' */
.icon-arrow-back:before { content: '\e802'; } /* '' */
.icon-lock:before { content: '\e803'; } /* '' */
.icon-arrow-up-circle:before { content: '\e804'; } /* '' */
.icon-exchange:before { content: '\e805'; } /* '' */
.icon-cake:before { content: '\e806'; } /* '' */
.icon-camera:before { content: '\e807'; } /* '' */
.icon-ios-share:before { content: '\e808'; } /* '' */
.icon-bonus-reward:before { content: '\e80a'; } /* '' */
.icon-paste:before { content: '\e80b'; } /* '' */
.icon-close:before { content: '\e80c'; } /* '' */
.icon-convert:before { content: '\e80d'; } /* '' */
.icon-backspace:before { content: '\e80e'; } /* '' */
.icon-edit:before { content: '\e80f'; } /* '' */
.icon-envelope:before { content: '\e810'; } /* '' */
.icon-faq:before { content: '\e811'; } /* '' */
.icon-claim-filled-old:before { content: '\e812'; } /* '' */
.icon-claim-circle:before { content: '\e813'; } /* '' */
.icon-donate-filled:before { content: '\e814'; } /* '' */
.icon-clock-filled:before { content: '\e815'; } /* '' */
.icon-donate-circle:before { content: '\e816'; } /* '' */
.icon-clock:before { content: '\e817'; } /* '' */
.icon-receive-filled:before { content: '\e818'; } /* '' */
.icon-receive-circle:before { content: '\e819'; } /* '' */
.icon-send-circle:before { content: '\e81a'; } /* '' */
.icon-send-filled:before { content: '\e81b'; } /* '' */
.icon-social-good-filled:before { content: '\e81c'; } /* '' */
.icon-social-good-circle:before { content: '\e81d'; } /* '' */
.icon-system-filled:before { content: '\e81e'; } /* '' */
.icon-system:before { content: '\e81f'; } /* '' */
.icon-feedback:before { content: '\e820'; } /* '' */
.icon-filter:before { content: '\e821'; } /* '' */
.icon-link:before { content: '\e822'; } /* '' */
.icon-gooddollar:before { content: '\e823'; } /* '' */
.icon-hidden:before { content: '\e824'; } /* '' */
.icon-gooddollar-small:before { content: '\e825'; } /* '' */
.icon-home:before { content: '\e826'; } /* '' */
.icon-invite:before { content: '\e827'; } /* '' */
.icon-location:before { content: '\e828'; } /* '' */
.icon-notifications:before { content: '\e829'; } /* '' */
.icon-phone:before { content: '\e82a'; } /* '' */
.icon-privacy:before { content: '\e82b'; } /* '' */
.icon-rewards-1:before { content: '\e82c'; } /* '' */
.icon-qrcode:before { content: '\e82d'; } /* '' */
.icon-search:before { content: '\e82e'; } /* '' */
.icon-settings:before { content: '\e82f'; } /* '' */
.icon-shown:before { content: '\e830'; } /* '' */
.icon-success:before { content: '\e831'; } /* '' */
.icon-trash:before { content: '\e832'; } /* '' */
.icon-profile:before { content: '\e833'; } /* '' */
.icon-username:before { content: '\e834'; } /* '' */
.icon-receive:before { content: '\e835'; } /* '' */
.icon-send:before { content: '\e836'; } /* '' */
.icon-claim-filled:before { content: '\e837'; } /* '' */
.icon-info:before { content: '\e839'; } /* '' */
.icon-rewards:before { content: '\e83b'; } /* '' */
.icon-wallet:before { content: '\e83c'; } /* '' */
.icon-goodmarket:before { content: '\e83d'; } /* '' */
.icon-support2:before { content: '\e83e'; } /* '' */
.icon-invite2:before { content: '\e83f'; } /* '' */
.icon-statistics:before { content: '\e841'; } /* '' */
.icon-send-to-address:before { content: '\e842'; } /* '' */
.icon-receive-to-address:before { content: '\e843'; } /* '' */
.icon-copy:before { content: '\e844'; } /* '' */
.icon-logout:before { content: '\e845'; } /* '' */
.icon-export-wallet:before { content: '\e846'; } /* '' */
.icon-add:before { content: '\e882'; } /* '' */
.icon-privacy-policy:before { content: '\e883'; } /* '' */
.icon-terms-of-use:before { content: '\e89f'; } /* '' */

